feat(test): controllers happy path test
